--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -4,7 +4,7 @@ form {
     width: 400px;
     /* Encadré pour voir les limites du formulaire */
     padding: 1em;
-    border: 1px solid rgb(233, 95, 16);
+    border: 2px solid rgb(233, 95, 16);
     border-radius: 1em;
   }
   
@@ -16,7 +16,8 @@ form {
     /* Pour être sûrs que toutes les étiquettes ont même taille et sont correctement alignées */
     display: inline-block;
     width: 90px;
-    text-align: left;
+    text-align:left ;
+    
   }
   
   input {
@@ -27,9 +28,10 @@ form {
     /* Pour que tous les champs texte aient la même dimension */
     width: 300px;
     box-sizing: border-box;
+    margin-left: 30px;
   
     /* Pour harmoniser le look & feel des bordures des champs texte */
-    border: 1px solid rgb(233, 95, 16);
+    border: 2px solid rgb(233, 95, 16);
   }
   
   input:focus {
