--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -20,6 +20,26 @@ form {
     
   }
   
+  select {
+    /* Pour s'assurer que tous les champs texte ont la même police.
+       Par défaut, les textarea ont une police monospace */
+    font: 1em sans-serif;
+  
+    /* Pour que tous les champs texte aient la même dimension */
+    width: 300px;
+    box-sizing: border-box;
+    margin-left: 30px;
+  
+    /* Pour harmoniser le look & feel des bordures des champs texte */
+    border: 2px solid rgb(233, 95, 16);
+  }
+  
+  select:focus {
+    /* Pour souligner légèrement les éléments actifs */
+    border-color: #000;
+  }
+
+
   input {
     /* Pour s'assurer que tous les champs texte ont la même police.
        Par défaut, les textarea ont une police monospace */
@@ -41,8 +61,9 @@ form {
   
  .button {
     /* Pour placer le bouton à la même position que les champs texte */
-    padding-left: 90px; /* même taille que les étiquettes */
-    }
+    margin-left: 90px; /* même taille que les étiquettes */
+      
+  }
   
   button {
     /* Cette marge supplémentaire représente grosso modo le même espace que celui
