--- a/css/style.css
+++ b/css/style.css
@@ -32,19 +32,19 @@ body {
     margin-right: -100% !important;
     padding-left: 10%;
     padding-right: 10%;
-    padding-top: auto;
-    padding-bottom: auto;
 }
 
 .carousel-item>.card{
     padding:2em;
     height: 70vh;
+    border: 0px solid rgba(0, 0, 0, .125);
+    margin-top: 1.5%;
 }
 
-.card-img{
+/*.col-md-4>img.card-img{
 margin-top: auto;
 margin-bottom: auto;
-}
+}*/
 
 .carousel-control-next-icon,
 .carousel-control-prev-icon {
@@ -66,11 +66,6 @@ margin-bottom: auto;
 }
 
 
-
-
-
-
-
 /******* SECTION ANCIENNE EDITION ********/
 .ancienne_edition{
     height: 50vh;
@@ -78,12 +73,26 @@ margin-bottom: auto;
 }
 
 /******* SECTION TEMOIGNAGES ********/
+
 .temoignages{
-    height: 25vh; 
+    height: 25vh;
+}
+#carouselTemoignages>.carousel-inner>.carousel-item.active{
+    height: 25vh;
 }
 
-#carouselExampleControls{
+#carouselTemoignages{
     height: 25vh;
+}
+
+.card.mb-4{
+    height: 25vh;
+    border: 0px solid rgba(0, 0, 0, .125);
+}
+
+.card-body{
+    margin-top: 1.5%;
+
 }
 
 .footer{
