--- a/css/galerie.css
+++ b/css/galerie.css
@@ -1,128 +1,198 @@
-/*custom font - Montserrat*/
-@import url(http://fonts.googleapis.com/css?family=Montserrat);
-/*basic reset*/
-* {margin: 0; padding: 0;}
-/*forcing the body to take 100% height*/
-html, body {min-height: 100%;}
-/*a nice BG*/
-body {
-	background: #544; /*fallback*/
-	background: linear-gradient(#544, #565);
-}
+﻿/* Code css de Mary Lou sur http://tympanus.net/codrops/2011/12/26/css3-lightbox/*/
+/* Ce code est à personnaliser éventuellement...*/
 
-/*Thumbnail Background*/
-.thumb {
-	width: 400px; height: 300px; margin: 70px auto;
-	perspective: 1000px;
+.lb-album{/*liste non ordonnée, conteneur vignettes*/
+        width: 900px;
+        margin: 0 auto;
+        font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif;
 }
-.thumb a {
-	display: block; width: 100%; height: 100%;
-	/*double layered BG for lighting effect*/
-	background:
-		linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-		url("../img/02.jpg");
-	/*disabling the translucent black bg on the main image*/
-	background-size: 0, cover;
-	/*3d space for children*/
-	transform-style: preserve-3d;
-	transition: all 0.5s;
+.lb-album li{/*vignette*/
+        float: left;
+        margin: 5px;
+        position: relative;
 }
-.thumb:hover a {transform: rotateX(80deg); transform-origin: bottom;}
-/*bottom surface */
-.thumb a:after {
-	/*36px high element positioned at the bottom of the image*/
-	content: ''; position: absolute; left: 0; bottom: 0;
-	width: 100%; height: 36px;
-	/*inherit the main BG*/
-	background: inherit; background-size: cover, cover;
-	/*draw the BG bottom up*/
-	background-position: bottom;
-	/*rotate the surface 90deg on the bottom axis*/
-	transform: rotateX(90deg); transform-origin: bottom;
+.lb-album li > a,
+.lb-album li > a img{
+        display: block;
 }
-/*label style*/
-.thumb a span {
-	color: white; text-transform: uppercase;
-	position: absolute; top: 100%; left: 0; width: 100%;
-	font: bold 12px/36px Montserrat; text-align: center;
-	/*the rotation is a bit less than the bottom surface to avoid flickering*/
-	transform: rotateX(-89.99deg); transform-origin: top;
-	z-index: 1;
+.lb-album li > a{
+        width: 150px;
+        height: 150px;
+        position: relative;
+        padding: 15px;
+        border: center;
+        background: rgb(233, 95, 16);
+        -webkit-box-shadow: 1px 1px 2px #fff, 1px 1px 2px rgba(158,111,86,0.3) inset;
+        -moz-box-shadow: 1px 1px 2px #fff, 1px 1px 2px rgba(158,111,86,0.3) inset;
+        box-shadow: 1px 1px 2px #fff, 1px 1px 2px rgba(158,111,86,0.3) inset;
+        -moz-border-radius: 4px;
+        -webkit-border-radius: 4px;
+        border-radius: 4px 4px 4px 4px;
 }
-/*shadow*/
-.thumb a:before {
-	content: ''; position: absolute; top: 0; left: 0;
-	width: 100%; height: 100%;
-	background: rgba(0, 0, 0, 0.5);
-	box-shadow: 0 0 100px 50px rgba(0, 0, 0, 0.5);
-	transition: all 0.5s;
-	/*by default the shadow will be almost flat, very transparent, scaled down with a large blur*/
-	opacity: 0.15;
-	transform: rotateX(95deg) translateZ(-80px) scale(0.75);
-	transform-origin: bottom;
+.lb-album li > a span{
+        position: absolute;
+        width: 150px;
+        height: 150px;
+        top: 10px;
+        left: 10px;
+        text-align: center;
+        line-height: 150px;
+        color: rgba(27,54,81,0.8);
+        text-shadow: 0px 1px 1px rgba(255,255,255,0.6);
+        font-size: 24px;
+        opacity: 0;
+        filter: alpha(opacity=0); /* internet explorer */
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
+        background: rgb(233, 95, 16);
+        background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%, rgba(241,210,194,1) 100%);
+        background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.56)), color-stop(100%,rgba(241,210,194,1)));
+        background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+        background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+        background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+        background: radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+        -webkit-transition: opacity 0.3s linear;
+        -moz-transition: opacity 0.3s linear;
+        -o-transition: opacity 0.3s linear;
+        -ms-transition: opacity 0.3s linear;
+        transition: opacity 0.3s linear;
 }
-.thumb:hover a:before {
-	opacity: 1;
-	/*blurred effect using box shadow as filter: blur is not supported in all browsers*/
-	box-shadow: 0 0 25px 25px rgba(0, 0, 0, 0.5);
-	/*pushing the shadow down and scaling it down to size*/
-	transform: rotateX(0) translateZ(-60px) scale(0.85);
+.lb-album li > a:hover span{
+        opacity: 1;
+        filter: alpha(opacity=99); /* internet explorer */
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=99)"; /*IE8*/
 }
-/*Thumbnail Background*/
-.thumb1 {
-	width: 200px; height: 300px; margin: 70px auto;
-	perspective: 1000px;
+.lb-overlay{/* Conteneur lightbox au démarrage*/
+        width: 0px;
+        height: 0px;
+        position: fixed;
+        overflow: hidden;
+        left: 0px;
+        top: 0px;
+        padding: 0px;
+        z-index: 99;
+        text-align: center;
+        background: rgb(233, 95, 16);
+        background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%, rgba(241,210,194,1) 100%);
+        background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.56)), color-stop(100%,rgba(241,210,194,1)));
+        background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+        background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+        background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+        background: radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
 }
-.thumb1 a #un {
-	display: block; width: 100%; height: 100%;
-	/*double layered BG for lighting effect*/
-	background:
-		linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-		url("../img/02.jpg");
-	/*disabling the translucent black bg on the main image*/
-	background-size: 0, cover;
-	/*3d space for children*/
-	transform-style: preserve-3d;
-	transition: all 0.5s;
+.lb-overlay > div{/*contient titre et navigation*/
+        position: relative;
+        color: rgba(27,54,81,0.8);
+        width: 550px;
+        height: 80px;
+        margin: 40px auto 0px auto;
+        text-shadow: 0px 1px 1px rgba(255,255,255,0.6);
 }
-.thumb1:hover a #un {transform: rotateX(80deg); transform-origin: bottom;}
-/*bottom surface */
-.thumb1 a #un:after {
-	/*36px high element positioned at the bottom of the image*/
-	content: ''; position: absolute; left: 0; bottom: 0;
-	width: 100%; height: 36px;
-	/*inherit the main BG*/
-	background: inherit; background-size: cover, cover;
-	/*draw the BG bottom up*/
-	background-position: bottom;
-	/*rotate the surface 90deg on the bottom axis*/
-	transform: rotateX(90deg); transform-origin: bottom;
+.lb-overlay div h3,
+.lb-overlay div p{
+        padding: 0px 20px;
+        width: 400px;
+        height: 60px;
 }
-/*label style*/
-.thumb1 a #un span {
-	color: white; text-transform: uppercase;
-	position: absolute; top: 100%; left: 0; width: 100%;
-	font: bold 12px/36px Montserrat; text-align: center;
-	/*the rotation is a bit less than the bottom surface to avoid flickering*/
-	transform: rotateX(-89.99deg); transform-origin: top;
-	z-index: 1;
+.lb-overlay div h3{/*titre image grand format*/
+        font-size: 30px;
+        float: left;
+        text-align: center;
+        border-right: 1px solid rgba(27,54,81,0.4);
 }
-/*shadow*/
-.thumb1 a #un:before {
-	content: ''; position: absolute; top: 0; left: 0;
-	width: 100%; height: 100%;
-	background: rgba(0, 0, 0, 0.5);
-	box-shadow: 0 0 100px 50px rgba(0, 0, 0, 0.5);
-	transition: all 0.5s;
-	/*by default the shadow will be almost flat, very transparent, scaled down with a large blur*/
-	opacity: 0.15;
-	transform: rotateX(95deg) translateZ(-80px) scale(0.75);
-	transform-origin: bottom;
+.lb-overlay div h3 span,
+.lb-overlay div p{
+        /*font-size: 16px;
+        font-family: Constantia, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;*/
+        font-style: italic;
 }
-.thumb1:hover a #un:before {
-	opacity: 1;
-	/*blurred effect using box shadow as filter: blur is not supported in all browsers*/
-	box-shadow: 0 0 25px 25px rgba(0, 0, 0, 0.5);
-	/*pushing the shadow down and scaling it down to size*/
-	transform: rotateX(0) translateZ(-60px) scale(0.85);
+.lb-overlay div h3 span{
+        display: block;
+        line-height: 6px;
+}
+.lb-overlay div p{
+        font-size: 14px;
+        text-align: center;
+        float: left;
+        width: 260px;
+}
+.lb-overlay a.lb-close{/*fermeture  lightbox*/
+        background: rgb(233, 95, 16);
+        z-index: 1001;
+        color: #fff;
+        position: absolute;
+        top: 43px;
+        left: 50%;
+        font-size: 15px;
+        line-height: 26px;
+        text-align: center;
+        width: 50px;
+        height: 23px;
+        overflow: hidden;
+        margin-left: -25px;
+        opacity: 0;
+        filter: alpha(opacity=0); /* internet explorer */
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
+        -webkit-box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+        -moz-box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+        box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+}
+.lb-overlay img{/*image grand format avec transition css*/
+        /* height: 100%; For Opera max-height does not seem to work */
+        max-height: 100%;
+        position: relative;
+        opacity: 0;
+        filter: alpha(opacity=0); /* internet explorer */
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
+        -webkit-box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+        -moz-box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+        box-shadow: 0px 2px 7px rgba(0,0,0,0.2);
+        -webkit-transition: opacity 0.5s linear;
+        -moz-transition: opacity 0.5s linear;
+        -o-transition: opacity 0.5s linear;
+        -ms-transition: opacity 0.5s linear;
+        transition: opacity 0.5s linear;
+}
+.lb-prev, .lb-next{/*navigation*/
+        text-indent: -9000px;
+        position: absolute;
+        top: -32px;
+        width: 24px;
+        height: 25px;
+        left: 50%;
+        opacity: 0.8;
+        filter: alpha(opacity=80); /* internet explorer */
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=80)"; /*IE8*/
+}
+.lb-prev:hover, .lb-next:hover{
+        opacity: 1;
+        filter: alpha(opacity=99); /* internet explorer */
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=99)"; /*IE8*/
+}
+.lb-prev{
+        margin-left: -30px;
+        background: transparent url(img/flechegauche.png) no-repeat top left;
+}
+.lb-next{
+        margin-left: 6px;
+        background: transparent url(../img/flechedroite.png) no-repeat top right;
+}
+.lb-overlay:target {/*ouverture de la lightbox, background opaque*/
+        width: auto;
+        height: auto;
+        bottom: 0px;
+        right: 0px;
+        padding: 80px 100px 120px 100px;
+}
+.lb-overlay:target img,
+.lb-overlay:target a.lb-close{
+        opacity: 1;
+        filter: alpha(opacity=99); /* internet explorer */
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=99)"; /*IE8*/
+}
+/*
+        100% Height for Opera as the max-height seems to be ignored, not optimal for large screens
+        http://bricss.net/post/11230266445/css-hack-to-target-opera
+*/
+x:-o-prefocus, .lb-overlay img {
+    height: 100%;
 }
