--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,27 @@ body {
 }
 
 
+
 /******* PRESENTATION ********/
 .presentation{
-    height: 70vh;   
+    position: relative;
+    height: 70vh;
+    background-color:white;  
+    
 }
+
+.presentation:after{
+    position: absolute;
+    height: 70vh;
+    content: '';
+    background-color: inherit;
+    top: -10em;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform-origin: top left;
+    transform: skewY(2deg);
+ }
 
 .carousel-item{
     height: 70vh;
@@ -32,19 +49,25 @@ body {
     margin-right: -100% !important;
     padding-left: 10%;
     padding-right: 10%;
+    z-index: 5;
 }
+
 
 .carousel-item>.card{
     padding:2em;
     height: 70vh;
     border: 0px solid rgba(0, 0, 0, .125);
-    
 }
 
 /*.col-md-4>img.card-img{
 margin-top: auto;
 margin-bottom: auto;
 }*/
+
+.carousel-control-next,
+.carousel-control-prev{
+    z-index: 5;
+}
 
 .carousel-control-next-icon,
 .carousel-control-prev-icon {
@@ -56,10 +79,12 @@ margin-bottom: auto;
 
 /******** SECTION NOUVELLE EDITION *********/
 .new_edition{
+    position: relative;
     height: 30vh;
     background-color: orangered;
-    padding-top: 4em;
+    padding-top: 4em;  
 }
+
 
 .card.card-body{
     background-color: orangered;
@@ -72,11 +97,28 @@ margin-bottom: auto;
     background-color: beige;
 }
 
+
 /******* SECTION TEMOIGNAGES ********/
 
 .temoignages{
     height: 25vh;
+    position: relative;
+    background-color: white;
 }
+
+.temoignages:after{
+    position: absolute;
+    height: 25vh;
+    content: '';
+    background-color: inherit;
+    top: -5em;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform-origin: top right;
+    transform: skewY(-2deg);
+ }
+
 #carouselTemoignages>.carousel-inner>.carousel-item.active{
     height: 25vh;
 }
