--- a/css/style.css
+++ b/css/style.css
@@ -59,10 +59,6 @@ body {
     border: 0px solid rgba(0, 0, 0, .125);
 }
 
-/*.col-md-4>img.card-img{
-margin-top: auto;
-margin-bottom: auto;
-}*/
 
 .carousel-control-next,
 .carousel-control-prev{
@@ -89,6 +85,10 @@ margin-bottom: auto;
 .card.card-body{
     background-color: orangered;
 }
+
+/***.accordion>.card>.card-header{
+    position: static;
+}*//* Je sais pas comment pousser les div du dessous !!!!*/
 
 
 /******* SECTION ANCIENNE EDITION ********/
@@ -134,6 +134,7 @@ margin-bottom: auto;
 
 .card-body{
     margin-top: 1.5%;
+    
 
 }
 
