--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,10 @@
 body{
     background: url(../img/campusetudiant.pdf);
 }
+h1{
+    text-align: center;
+}
+
 #container{
     width:400px;
     margin:0 auto;
@@ -10,7 +14,7 @@ body{
 form {
     width:100%;
     padding: 30px;
-    border: 1px solid #f1f1f1;
+    border: 2px solid #f1f1f1;
     background: #fff;
     box-shadow: 0 0 20px 0 rgb(233, 95, 16), 0 5px 5px 0 rgb(233, 95, 16);
 }
@@ -26,7 +30,7 @@ input[type=text], input[type=password] {
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     box-sizing: border-box;
 }
 
@@ -42,6 +46,6 @@ input[type=submit] {
 }
 input[type=submit]:hover {
     background-color: white;
-    color: rgb(233, 95, 16);
+    color: rgb(17, 16, 15);
     border: 1px solid rgb(233, 95, 16);
 }
