--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -1,3 +1,7 @@
+body{
+  background: url(../img/fond.jpg);
+}
+
 form {
     /* Uniquement centrer le formulaire sur la page */
     margin: 0 auto;
