--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,28 @@ body {
     text-align: center;
 }
 
+/******MAIN********/
+
+.main{
+    height: 80%;
+    z-index:2;
+}
+
+
 
 /******* SECTION ENTETE *******/
 .entete {
     height: 100vh;
     background-color: orange;
+    background-image: url(../img/fond.jpg);
+    background-repeat: repeat;
+    background-size: cover;
+    z-index:1;
+}
+
+.entete>img{
+    height: 80%;
+    z-index:3;
 }
 
 
