--- a/css/login.css
+++ b/css/login.css
@@ -1,5 +1,7 @@
 body{
     background: url(../img/fond.jpg);
+    background-size:cover;
+    height:100%
 }
 h1{
     text-align: center;
@@ -16,7 +18,7 @@ form {
     padding: 30px;
     border: 2px solid #f1f1f1;
     background: #fff;
-    box-shadow: 0 0 20px 0 rgb(233, 95, 16), 0 5px 5px 0 rgb(233, 95, 16);
+    box-shadow: 0 0 20px 0 rgb(0, 0, 0), 0 5px 5px 0 rgb(0, 0, 0);
 }
 #container h1{
     width: 38%;
