--- a/css/header.css
+++ b/css/header.css
@@ -12,6 +12,6 @@
     margin-left:40px;
 
 }
-.navbar  {
-    background: rgba(255, 255, 255, 0.3) !important;
+.mynavbar  {
+    background: transparent !important;
 }
