--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,12 @@ body {
     background-image: url(../img/fond.jpg);
     background-repeat: repeat;
     background-size: cover;
-    z-index:1;
+    z-index: 1;
 }
 
-.entete>img{
+.entete>img {
     height: 80%;
-    z-index:3;
+    z-index: 3;
 }
 
 
@@ -61,7 +61,6 @@ body {
 }
 
 
-.carousel-item>.card {}
 
 .carousel-item>.card.mb-3 {
     padding: 2em;
@@ -70,12 +69,24 @@ body {
     justify-content: center;
 }
 
-.col-md-4 {}
 
-.col-md-4>img.card-img{
+.card-img {
+    width: 20em;
+    height: auto;
     z-index: 20;
+    vertical-align: center;
 }
 
+
+
+.col-md-8 {
+    display: flex;
+    align-items: center;
+}
+
+.col-md-8>.card-body>.card-text{
+    text-align: left;
+}
 
 .carousel-control-next,
 .carousel-control-prev {
@@ -94,7 +105,9 @@ body {
 .new_edition {
     position: relative;
     height: 30vh;
-    background-image: url(../img/fond.jpg);
+    background-color: orangered;
+    /*background-image: url(../img/fond.jpg);
+    background-size: cover;*/
     padding-top: 4em;
 }
 
@@ -137,22 +150,19 @@ body {
     transform: skewY(-2deg);
 }
 
-#carouselTemoignages>.carousel-inner>.carousel-item.active {
+#carouselTemoignages {
     height: 25vh;
 }
 
-#carouselTemoignages {
+#carouselTemoignages>.carousel-inner>.carousel-item.active {
     height: 25vh;
 }
 
 .carousel-item>.card.mb-4 {
     height: 25vh;
     border: 0px solid rgba(0, 0, 0, .125);
-}
-
-.col-md-12>.card-body {
-    margin-top: 1.5%;
-
+    display: flex;
+    justify-content: center;
 
 }
 
