--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,7 @@ body {
 /******* SECTION ENTETE *******/
 .entete {
     height: 100vh;
-    background-color: orange;
-    background-image: url(../img/fond.jpg);
+    background-color: orangered background-image: url(../img/fond.jpg);
     background-repeat: repeat;
     background-size: cover;
     z-index: 1;
@@ -83,7 +82,7 @@ body {
     align-items: center;
 }
 
-.col-md-8>.card-body>.card-text{
+.col-md-8>.card-body>.card-text {
     text-align: left;
 }
 
@@ -104,9 +103,10 @@ body {
 .new_edition {
     position: relative;
     min-height: 30vh;
-    background-color: orangered;
-    /*background-image: url(../img/fond.jpg);
-    background-size: cover;*/
+    background: #FB9F15;
+    background: -moz-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
+    background: -webkit-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
+    background: linear-gradient(to right, #FB9F15 0%, #F4552B 100%);
     padding-top: 4em;
 }
 
@@ -116,7 +116,7 @@ body {
     border: 0px solid rgba(0, 0, 0, .125);
 }
 
-#button-inscription{
+#button-inscription {
     margin-top: 1em;
 }
 
@@ -134,7 +134,10 @@ body {
 .temoignages {
     height: 25vh;
     position: relative;
-    background-color: orangered;
+    background: #FB9F15;
+    background: -moz-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
+    background: -webkit-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
+    background: linear-gradient(to right, #FB9F15 0%, #F4552B 100%);
 }
 
 .temoignages:after {
@@ -163,7 +166,7 @@ body {
     border: 0px solid rgba(0, 0, 0, .125);
     display: flex;
     justify-content: center;
-    background-color: orangered;
+    background-color:transparent;
 
 }
 
