modif icone fleches carousels sur index

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,9 @@ body {
     text-align: center;
 }
 
-
+p{
+    overflow: hidden;
+}
 
 /******* SECTION ENTETE *******/
 .entete {
@@ -82,6 +84,8 @@ body {
     align-items: center;
 }
 
+
+
 .col-md-8>.card-body>.card-text {
     text-align: left;
 }
@@ -90,13 +94,20 @@ body {
 .carousel-control-prev {
     z-index: 5;
 }
+    
 
 .carousel-control-next-icon,
 .carousel-control-prev-icon {
     width: 40px !important;
-    height: 40px !important;
-    background-color: orangered;
-    border-radius: 50%;
+    height: 40px !important;    
+}
+
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e")
+}
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e")
 }
 
 /******** SECTION NOUVELLE EDITION *********/
@@ -112,7 +123,10 @@ body {
 
 
 #collapseExample>.card.card-body {
-    background-color: orangered;
+    background: #FB9F15;
+    background: -moz-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
+    background: -webkit-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
+    background: linear-gradient(to right, #FB9F15 0%, #F4552B 100%);
     border: 0px solid rgba(0, 0, 0, .125);
 }
 
@@ -153,6 +167,11 @@ body {
     transform: skewY(-2deg);
 }
 
+.temoignages p{
+    color: white;
+    padding-bottom: 1em;
+}
+
 #carouselTemoignages {
     height: 25vh;
 }
@@ -168,6 +187,14 @@ body {
     justify-content: center;
     background-color:transparent;
 
+}
+
+#carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e")
+}
+
+#carousel-control-next-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e")
 }
 
 /*.footer{
