--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -3,9 +3,10 @@ html{
 }
 
 body {
-  background: url(../img/mascotte.png) no-repeat left,
+  background: url(../img/mascotte.png) no-repeat center,
    url(../img/eclair.png) no-repeat center;
-  background-size: cover;
+  background-size: 65%;
+  
 }
 .form {
     /* Uniquement centrer le formulaire sur la page */
