--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ p {
 
 .carousel-item>.card.mb-3 {
     padding: 2em;
-    height: 50vh;
+    min-height: 50vh;
     border: 0px solid rgba(0, 0, 0, .125);
     justify-content: center;
 }
@@ -168,7 +168,8 @@ p {
 
 
 /******* SECTION ANCIENNE EDITION ********/
-.ancienne.edition {
+
+/*.ancienne.edition {
     background-color: white;
 }
 
@@ -186,7 +187,47 @@ p {
     height: auto;
     margin: 1em;
     border-radius: 5px;
-}
+}*/
+
+
+.container {
+    display: flex;
+    width: 100%;
+    padding: 4% 2%;
+    box-sizing: border-box;
+    height: 45vh;
+  }
+  
+  .box {
+    flex: 1;
+    overflow: hidden;
+    transition: .5s;
+    margin: 0 2%;
+    box-shadow: 0 20px 30px rgba(0,0,0,.1);
+    line-height: 0;
+  }
+  
+  .box > img {
+    width: 200%;
+    height: calc(100% - 10vh);
+    object-fit: cover; 
+    transition: .5s;
+  }
+  
+  .box > span {
+    font-size: 3.8vh;
+    display: block;
+    text-align: center;
+    height: 10vh;
+    line-height: 2.6;
+  }
+  
+  .box:hover { flex: 1 1 50%; }
+  .box:hover > img {
+    width: 100%;
+    height: 100%;
+  }
+   
 
 
 /******* SECTION TEMOIGNAGES ********/
