--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ p {
 }*/
 
 
-.container {
+#ancienne_edition{
     display: flex;
     width: 100%;
     padding: 4% 2%;
@@ -198,7 +198,7 @@ p {
     height: 45vh;
   }
   
-  .box {
+  #anciennephoto {
     flex: 1;
     overflow: hidden;
     transition: .5s;
@@ -207,14 +207,14 @@ p {
     line-height: 0;
   }
   
-  .box > img {
+  #anciennephoto > img {
     width: 200%;
     height: calc(100% - 10vh);
     object-fit: cover; 
     transition: .5s;
   }
   
-  .box > span {
+  #anciennephoto > span {
     font-size: 3.8vh;
     display: block;
     text-align: center;
@@ -222,8 +222,8 @@ p {
     line-height: 2.6;
   }
   
-  .box:hover { flex: 1 1 50%; }
-  .box:hover > img {
+  #anciennephoto:hover { flex: 1 1 50%; }
+  #anciennephoto:hover > img {
     width: 100%;
     height: 100%;
   }
