--- a/css/style.css
+++ b/css/style.css
@@ -125,8 +125,14 @@ p {
     background: -moz-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
     background: -webkit-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
     background: linear-gradient(to right, #FB9F15 0%, #F4552B 100%);
-    padding-top: 1em;
 }
+
+.new_edition h1 {
+    margin-top: 1em;
+    font-size: 2.5em;
+    line-height: 2.5em;
+}
+
 
 .btn-circle {
     width: 3.500rem;
@@ -169,12 +175,19 @@ p {
 
 /******* SECTION ANCIENNE EDITION ********/
 
-/*.ancienne.edition {
+.ancienne_edition {
     background-color: white;
 }
 
+
+.ancienne_edition h2 {
+    margin-top: 1em;
+    font-size: 1.5em;
+    line-height: 1.5em;
+}
+
 .anciennephoto {
-    min-height: 45vh;
+    min-height: 40vh;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -185,49 +198,16 @@ p {
 .anciennephoto img {
     width: 20em;
     height: auto;
-    margin: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
     border-radius: 5px;
-}*/
+}
 
-
-#ancienne_edition{
-    display: flex;
-    width: 100%;
-    padding: 4% 2%;
-    box-sizing: border-box;
-    height: 45vh;
-  }
-  
-  #anciennephoto {
-    flex: 1;
-    overflow: hidden;
-    transition: .5s;
-    margin: 0 2%;
-    box-shadow: 0 20px 30px rgba(0,0,0,.1);
-    line-height: 0;
-  }
-  
-  #anciennephoto > img {
-    width: 200%;
-    height: calc(100% - 10vh);
-    object-fit: cover; 
-    transition: .5s;
-  }
-  
-  #anciennephoto > span {
-    font-size: 3.8vh;
-    display: block;
-    text-align: center;
-    height: 10vh;
-    line-height: 2.6;
-  }
-  
-  #anciennephoto:hover { flex: 1 1 50%; }
-  #anciennephoto:hover > img {
-    width: 50%;
-    height: 50%;
-  }
-   
+.anciennephoto p {
+    line-height: 1.2em;
+    font-size: 1em;
+    margin-bottom: 1em;
+}
 
 
 /******* SECTION TEMOIGNAGES ********/
