--- a/css/header1.css
+++ b/css/header1.css
@@ -1,40 +1,36 @@
-body {
+header {
     font: normal .8em/1.5em Arial, Helvetica, sans-serif;
-    
+    background: #ebebeb;
     width: 100%;
     height:auto;
     margin: 0px auto;
-    
+    color: #666;
 }
 
-a {
+header a {
     color: transparent;
-    font-size: 1em;
 }
 #logo{
     width:40px;
    float:left;
 }   
-form{
-    padding-top: 1.5em;
-}
+
 
 #logocm{
     width:150px;
     height: auto;
     z-index:50;
     position:absolute;
-    margin-top: 20px;
+    margin-top: 30px;
     margin-left:-60px;
 
 }
 
 #nav {
-    
     margin: 0;
     padding: 7px 6px 0;
     background: white url(../images/gradient.png) repeat-x 0 -110px;
-    line-height: 50%;
+    line-height: 100%;
     border-radius: 0;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
@@ -42,17 +38,15 @@ form{
     -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
     width: 100%;
     height: auto;
-    
+
 }
 
 #nav li {
     margin: 0 5px;
-    padding: 0 0 16px;
+    padding: 0 0 8px;
     float: left;
     position: relative;
     list-style: none;
-}
-
 }
 
 /* main level link */
@@ -61,9 +55,9 @@ form{
     color: black;
     text-decoration: none;
     display: block;
-    padding: 2px 30px;
-    margin: 20px;
-    
+    padding: 8px 20px;
+    margin: 0;
+
     text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
 }
 
@@ -75,7 +69,7 @@ form{
 /* main level link hover */
 #nav .current a,
 #nav li:hover>a {
-    background: rgb(255, 255, 255) url(../images/gradient.png) repeat-x 0 -40px;
+    background: #666 url(../images/gradient.png) repeat-x 0 -40px;
     color: #444;
     border-top: solid 1px #f8f8f8;
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .2);
@@ -97,7 +91,8 @@ form{
 #nav ul a:hover {
     background: #0078ff url(../images/gradient.png) repeat-x 0 -100px !important;
     color: #fff !important;
-    
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
     text-shadow: 0 1px 1px rgba(0, 0, 0, .1);
 }
 
@@ -113,12 +108,12 @@ form{
     padding: 0;
     width: 185px;
     position: absolute;
-    width:100%;
     top: 35px;
     left: 0;
     background: #ddd url(../images/gradient.png) repeat-x 0 0;
     border: solid 1px #b4b4b4;
-        -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
+
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
     -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
     box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
     z-index: 100;
@@ -178,22 +173,4 @@ html[xmlns] #nav {
 
 * html #nav {
     height: 1%;
-}
-
-/* Grow */
-.hvr-grow {
-    display: inline-block;
-    vertical-align: middle;
-    transform: translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    backface-visibility: hidden;
-    -moz-osx-font-smoothing: grayscale;
-    transition-duration: 0.3s;
-    transition-property: transform;
-}
-
-.hvr-grow:hover,
-.hvr-grow:focus,
-.hvr-grow:active {
-    transform: scale(1.1);
 }
