--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,8 @@
 .container  {
     display:flex;
-    flex-direction:row;
-    flex-direction: left;
-    grid-auto-rows: minmax(200px, auto);
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
 }
 
 .container img{
@@ -11,4 +10,3 @@
     height:50px;
     margin:5px;
 }
-
