--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -1,12 +1,13 @@
 html{
-  
+
 }
 
 body {
-  background: url(../img/mascotte.png) no-repeat center,
-   url(../img/eclair.png) no-repeat center;
+  background: url(../img/mascotte.png) no-repeat left,
+   url(../img/eclair.png) no-repeat center,
+   url(../img/mascotte.png) no-repeat right;
   background-size: 65%;
-  
+   width:auto; 
 }
 .form {
     /* Uniquement centrer le formulaire sur la page */
