--- a/css/style.css
+++ b/css/style.css
@@ -134,29 +134,9 @@ p {
 }
 
 
-.btn-circle {
-    width: 3.500rem;
-    height: 3.500rem;
-    text-align: center;
-    padding: 0.75rem 1rem;
-    font-size: 3rem;
-    line-height: 1.428571429;
-    border-radius: 1.876rem;
-    background-color: black;
-}
 
-.btn-circle.btn-lg {
-    width: 6rem;
-    height: 6rem;
-    padding: 0.625rem 1rem;
-    font-size: 4.5rem;
-    line-height: 1.33;
-    border-radius: 3.126rem;
-    background-color: rgb(255, 239, 9);
-}
-
-.fa.fa-chevron-down {
-    color: #FB9F15;
+.fa.fa-arrow-down {
+    color: black;
 }
 
 #collapseExample>.card.card-body {
