--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -3,8 +3,7 @@ html{
 }
 
 body {
-  background: url(../img/mascotte.png) no-repeat left,
-   url(../img/eclair.png) no-repeat center,
+  background:  url(../img/eclair.png) no-repeat center,
    url(../img/mascotte.png) no-repeat right;
   background-size: 65%;
    width:auto; 
