--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
     position: relative;
-    background-color: white;
+    
     min-height: 100%;
     margin: 0;
     padding: 0;
@@ -115,6 +115,14 @@ p {
 .carousel-control-next-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e")
 }
+/************* PARALLAX********************/
+.parallax-window{
+    min-height: 30vh;
+    
+    z-index: 300;
+    padding-top: 20vh;
+    padding-bottom: 20vh;
+}
 
 /******** SECTION NOUVELLE EDITION *********/
 .new_edition {
@@ -125,6 +133,9 @@ p {
     background: -moz-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
     background: -webkit-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
     background: linear-gradient(to right, #FB9F15 0%, #F4552B 100%);
+    width:70%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .new_edition h1 {
@@ -132,7 +143,16 @@ p {
     font-size: 2.5em;
     line-height: 2.5em;
 }
-
+.button{
+    display:block;
+		color:#555555;
+		font-weight:bold;
+		height:30px;
+		line-height:29px;
+		margin-bottom:14px;
+		text-decoration:none;
+		width:191px;
+}
 
 
 .fa.fa-arrow-down {
