--- a/css/style.css
+++ b/css/style.css
@@ -143,21 +143,26 @@ p {
     font-size: 2.5em;
     line-height: 2.5em;
 }
-.button{
+#button1{ 
+
     display:block;
-		color:#555555;
-		font-weight:bold;
-		height:30px;
-		line-height:29px;
-		margin-bottom:14px;
-		text-decoration:none;
-		width:191px;
+	background-color:white ;
+	font-weight:bold;
+	height:60px;
+	line-height:29px;
+	margin-bottom:25px;
+	text-decoration:none;
+    width:191px;
+    border: 1px grey solid;
 }
 
+.hvr-rectangle-out{
+    font: black !important;
+}
 
-.fa.fa-arrow-down {
+/*.fa.fa-arrow-down {
     color: black;
-}
+}*/
 
 #collapseExample>.card.card-body {
     background: #FB9F15;
