--- a/css/footer.css
+++ b/css/footer.css
@@ -4,6 +4,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    background: transparent;
 }
 
 .container img{
@@ -11,3 +12,4 @@
     height:50px;
     margin:5px;
 }
+
