--- a/css/header.css
+++ b/css/header.css
@@ -1,17 +1,34 @@
 #logo{
-    width:40px;
+    width:2em;
    float:left;
+   margin-left: 2em;
    
 }
 
 #logocm{
-    width:150px;
+    width:7.5em;
     z-index: 40;
     position:absolute;
-    margin-top: -14px;
-    margin-left:120px;
+    margin-top: 0em;
+    margin-left:4.5em;
 
 }
 .mynavbar  {
     background: transparent !important;
+}
+
+#navbarDropdown{
+    margin-left: 4.5em;
+}
+
+.fas {
+    margin-left: 4em;
+}
+
+#galerie{
+    margin-left: 18em;
+}
+
+#contact{
+    margin-left: 10em;
 }
