--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
     position: relative;
-    
+
     min-height: 100%;
     margin: 0;
     padding: 0;
@@ -59,9 +59,10 @@ p {
 }
 
 .carousel-item {
-    height: 50vh;
+    height: 45vh;
     margin-left: 0%;
     margin-right: -100% !important;
+    margin-bottom: 2.5em;
     padding-left: 10%;
     padding-right: 10%;
     z-index: 5;
@@ -71,29 +72,34 @@ p {
 
 .carousel-item>.card.mb-3 {
     padding: 2em;
-    min-height: 50vh;
-    border: 0px solid rgba(0, 0, 0, .125);
-    justify-content: center;
+    min-height: 45vh;
+    margin-bottom:
+        border: 0px solid rgba(0, 0, 0, .125);
+    -webkit-box-shadow: 0px -5px 15px 3px rgba(177, 177, 177, 0.17);
+    box-shadow: 0px -5px 15px 3px rgba(177, 177, 177, 0.17);
 }
 
 .card-img {
-    width: 20em;
+    width: 70%;
     height: auto;
     z-index: 20;
-    vertical-align: center;
+    justify-content: center;
 }
 
 
 
 .col-md-8 {
     display: flex;
-    align-items: center;
 }
 
-
+.col-md-8>.card-body>.card-title {
+    font-size: 2em;
+}
 
 .col-md-8>.card-body>.card-text {
     text-align: left;
+    font-size: 1.2em;
+    line-height: 1.2em;
 }
 
 .carousel-control-next,
@@ -115,10 +121,11 @@ p {
 .carousel-control-next-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e")
 }
+
 /************* PARALLAX********************/
-.parallax-window{
+.parallax-window {
     min-height: 30vh;
-    
+
     z-index: 300;
     padding-top: 20vh;
     padding-bottom: 20vh;
@@ -133,7 +140,7 @@ p {
     background: -moz-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
     background: -webkit-linear-gradient(left, #FB9F15 0%, #F4552B 100%);
     background: linear-gradient(to right, #FB9F15 0%, #F4552B 100%);
-    width:70%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -143,20 +150,21 @@ p {
     font-size: 2.5em;
     line-height: 2.5em;
 }
-#button1{ 
 
-    display:block;
-	background-color:white ;
-	font-weight:bold;
-	height:60px;
-	line-height:29px;
-	margin-bottom:25px;
-	text-decoration:none;
-    width:191px;
+#button1 {
+
+    display: block;
+    background-color: white;
+    font-weight: bold;
+    height: 60px;
+    line-height: 29px;
+    margin-bottom: 25px;
+    text-decoration: none;
+    width: 191px;
     border: 1px grey solid;
 }
 
-.hvr-rectangle-out{
+.hvr-rectangle-out {
     font: black !important;
 }
 
