--- a/css/footer.css
+++ b/css/footer.css
@@ -1,3 +1,16 @@
+html {
+    height: 100%;
+  }
+  body {
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
+   
+  }
+
+  footer {
+    
+}
 
 .container  {
     display:flex;
