--- a/css/header.css
+++ b/css/header.css
@@ -2,8 +2,8 @@
     width:2em;
    float:left;
    margin-left: 2em;
-   position: absolute;
-   z-index: 600;
+   position: relative;
+   z-index: 300;
    
 }
 
