--- a/css/galerie.css
+++ b/css/galerie.css
@@ -13,6 +13,8 @@
 h1 {
         /*font-family: 'cookitregular';*/
         font-size: 4em;
+        padding-top:2em;
+        line-height: 4em;
 }
 
 html {
