--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,9 @@
-#logo{
+#/*logo{
     width:2em;
    float:left;
    margin-left: 2em;
    position: relative;
-   z-index: 300;
+   z-index: 300;*/
    
 }
 
@@ -11,8 +11,8 @@
     width:12em;
     z-index: 30;
     position:absolute;
-    margin-top: -2em;
-    margin-left:4.5em;
+    /*margin-top: -2em;
+    margin-left:4.5em;*/
 
 }
 
@@ -20,30 +20,33 @@
     width:12em;
     z-index: 30;
     position:absolute;
-    margin-top: 1em;
-    margin-left:3em;
+   /* margin-top: 1em;*/
+    margin-left:6em;
 
 }
 .mynavbar  {
     background: transparent !important;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     
 }
 
 nav {
-    justify-content: space-around;
+    
 }
 #navbarDropdown{
-    margin-left: 4.5em;
-}
-
-.fas {
     margin-left: 6em;
 }
 
+.fas {
+    margin-left: 4em;
+}
+
 #faq{
-    margin-left: 10em;
+    padding-left: 10em;
 }
 
 #contact{
-    margin-left: 20em;
+    padding-left: 25em;
 }
